--- a/React File/Quran/package.json
+++ b/React File/Quran/package.json
@@ -14,8 +14,10 @@
     "axios": "^1.13.4",
     "framer-motion": "^12.31.0",
     "lenis": "^1.3.17",
+    "nanoid": "^5.1.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hook-form": "^7.71.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.13.0",
     "tailwindcss": "^4.1.18"
