--- a/package.json
+++ b/package.json
@@ -1,22 +1,36 @@
 {
-  "name": "edits-of-quran-site",
-  "version": "1.0.0",
-  "description": "A website for reading and exploring Quran verses",
-  "main": "index.js",
+  "name": "quran",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": ["quran", "islamic", "website"],
-  "author": "Ali",
-  "license": "ISC",
-  "engines": {
-    "node": ">=16.0.0"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "ejs": "^3.1.10",
-    "ejs-mate": "^4.0.0",
-    "express": "^4.19.2"
+    "@tailwindcss/vite": "^4.1.18",
+    "axios": "^1.13.4",
+    "framer-motion": "^12.31.0",
+    "lenis": "^1.3.17",
+    "nanoid": "^5.1.6",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-hook-form": "^7.71.1",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.13.0",
+    "tailwindcss": "^4.1.18"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.39.1",
+    "@types/react": "^19.2.5",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.1",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "globals": "^16.5.0",
+    "vite": "^7.2.4"
   }
 }
